--- a/index.html
+++ b/index.html
@@ -35,12 +35,18 @@
                 <input type="checkbox" id="annat" name="Kön" value="Annat">
             </div>
 
+
             <div class="text-inputs">
                 <h2>Kontaktuppgifter:</h2>
                 <label for="namn">Namn:</label>
                 <input type="text" id="namn" name="namn" placeholder="Namn här..">
                 <label for="efternamn">Efternamn:</label>
                 <input type="text" id="efternamn" name="efternamn" placeholder="Efternamn här..">
+            </div>
+
+            <div class="password">
+                <label for="pass">Lösenord:</label>
+                <input id="pass" name="password" type="password" required/>
             </div>
 
             <div class="text-inputs2">
