--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <div class="password">
                 <label for="pass">Lösenord:</label>
-                <input id="pass" name="password" type="password" required/>
+                <input id="pass" name="password" type="password" placeholder="Lösenord här.." required />
             </div>
 
             <div class="text-inputs2">
@@ -56,11 +56,10 @@
                 <input type="tel" id="telefon" name="telefon" placeholder="Telefonnummer här.." required>
             </div>
 
-            <div class="textarea" height="200px" width="400px">
-                <h2>Meddelande:</h2>
-                <textarea>
-
-</textarea>
+            <div class="message">
+                <label for="msg">Meddelande:</label>
+                <textarea id="msg" name="message"></textarea>
+            </div>
 
                 <div class="send">
                     <button type="submit">Skicka</button>
