--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                 <h2>Åldersgrupp:</h2>
                 <label for="18-35">18-35</label>
                 <input type="radio" id="18-35" name="Åldersgrupp" value="18-35">
-                <label for="35-50">35-50:</label>
+                <label for="35-50">35-50</label>
                 <input type="radio" id="35-50" name="Åldersgrupp" value="35-50">
-                <label for="50-65">50-65:</label>
+                <label for="50-65">50-65</label>
                 <input type="radio" id="50-65" name="Åldersgrupp" value="50-65">
                 <label for="65+">65+</label>
                 <input type="radio" id="65+" name="Åldersgrupp" value="65+">
             </div>
-
+            
             <div class="checkbox-buttons">
                 <h2>Kön:</h2>
                 <label for="Man">Man:</label>
@@ -32,9 +32,9 @@
                 <label for="Kvinna">Kvinna:</label>
                 <input type="checkbox" id="Kvinna" name="Kön" value="Kvinna">
                 <label for="Annat">Annat:</label>
-                <input type="checkbox" id="annat" name="Kön" value="Annat">
+                <input type="checkbox" id="Annat" name="Kön" value="Annat">
             </div>
-
+            
 
             <div class="text-inputs">
                 <h2>Kontaktuppgifter:</h2>
